{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 61,
  "lineage": "785e6390-328f-8e49-3d7a-3ee60d82d0b6",
  "resources": [
    {
      "module": "module.presh-vm",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "pnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/pee/providers/Microsoft.Network/networkSecurityGroups/pee-nsg",
            "location": "uksouth",
            "name": "pee-nsg",
            "resource_group_name": "pee",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.presh-vm.azurerm_resource_group.prg"
          ]
        }
      ]
    },
    {
      "module": "module.presh-vm",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/pee/providers/Microsoft.Network/networkSecurityGroups/pee-nsg/securityRules/p80",
            "name": "p80",
            "network_security_group_name": "pee-nsg",
            "priority": 201,
            "protocol": "Tcp",
            "resource_group_name": "pee",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.presh-vm.azurerm_network_security_group.pnsg",
            "module.presh-vm.azurerm_resource_group.prg"
          ]
        }
      ]
    },
    {
      "module": "module.presh-vm",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "example2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/pee/providers/Microsoft.Network/networkSecurityGroups/pee-nsg/securityRules/p22",
            "name": "p22",
            "network_security_group_name": "pee-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "pee",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.presh-vm.azurerm_network_security_group.pnsg",
            "module.presh-vm.azurerm_resource_group.prg"
          ]
        }
      ]
    },
    {
      "module": "module.presh-vm",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ppip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/pee/providers/Microsoft.Network/publicIPAddresses/pip-0",
            "idle_timeout_in_minutes": 30,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pip-0",
            "resource_group_name": "pee",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "pee-vmtest"
            }
          },
          "dependencies": [
            "module.presh-vm.azurerm_resource_group.prg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/pee/providers/Microsoft.Network/publicIPAddresses/pip-1",
            "idle_timeout_in_minutes": 30,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "pip-1",
            "resource_group_name": "pee",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "pee-vmtest"
            }
          },
          "dependencies": [
            "module.presh-vm.azurerm_resource_group.prg"
          ]
        }
      ]
    },
    {
      "module": "module.presh-vm",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "psnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/pee/providers/Microsoft.Network/virtualNetworks/pee-vn/subnets/pee-sn",
            "name": "pee-sn",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "pee",
            "virtual_network_name": "pee-vn"
          },
          "dependencies": [
            "module.presh-vm.azurerm_resource_group.prg",
            "module.presh-vm.azurerm_virtual_network.pvnet"
          ]
        }
      ]
    },
    {
      "module": "module.presh-vm",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "pnsga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/pee/providers/Microsoft.Network/virtualNetworks/pee-vn/subnets/pee-sn",
            "network_security_group_id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/pee/providers/Microsoft.Network/networkSecurityGroups/pee-nsg",
            "subnet_id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/pee/providers/Microsoft.Network/virtualNetworks/pee-vn/subnets/pee-sn"
          },
          "dependencies": [
            "module.presh-vm.azurerm_network_security_group.pnsg",
            "module.presh-vm.azurerm_resource_group.prg",
            "module.presh-vm.azurerm_subnet.psnet",
            "module.presh-vm.azurerm_virtual_network.pvnet"
          ]
        }
      ]
    },
    {
      "module": "module.presh-vm",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "pvnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "76aca045-2919-4b97-a55a-73a31b0dbe23",
            "id": "/subscriptions/ee6a73ce-e1e7-41c3-858f-392035cca7a8/resourceGroups/pee/providers/Microsoft.Network/virtualNetworks/pee-vn",
            "location": "uksouth",
            "name": "pee-vn",
            "resource_group_name": "pee"
          },
          "dependencies": [
            "module.presh-vm.azurerm_resource_group.prg"
          ]
        }
      ]
    }
  ]
}